--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +13,16 @@
         }
 
         header {
-            background-image: url('header-background.jpg'); /* Add your header background image */
+            background-image: url('header-background.jpg');
             background-size: cover;
-            color: #fff;
+            color: #333; /* Darker text color for better contrast */
             text-align: center;
             padding: 100px 0;
+        }
+
+        h1, p {
+            margin: 0;
+            padding: 0;
         }
 
         nav {
@@ -47,13 +53,12 @@
         }
     </style>
 </head>
-<body>
 
+<body>
     <header>
         <h1>Marriott International Hotels</h1>
         <p>Discover Luxury and Comfort</p>
     </header>
-
     <nav>
         <a href="#">Home</a>
         <a href="#">Rooms</a>
@@ -61,16 +66,14 @@
         <a href="#">Events</a>
         <a href="#">Contact</a>
     </nav>
-
     <section>
         <h2>Featured Hotels</h2>
         <p>Explore our luxurious hotels around the world.</p>
         <!-- Add hotel descriptions, images, videos, buttons, etc. here -->
     </section>
-
     <footer>
         <p>&copy; 2023 Marriott International. All rights reserved.</p>
     </footer>
-
 </body>
+
 </html>
