--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
 <body>
     <header>
-        <h1>Marriott International Hotels</h1>
-        <p>Discover Luxury and Comfort</p>
+        <h1>&lrm;Marriott International Hotels</h1>
+        <p>&lrm;Discover Luxury and Comfort</p>
     </header>
     <nav>
         <a href="#">Home</a>
