--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!-- Add hotel descriptions, images, videos, buttons, etc. here -->
     </section>
     <footer>
-        <p>&copy; 2023 Marriott International. All rights reserved.</p>
+        <p lang="en" dir="ltr">&copy; 2023 Marriott International. All rights reserved.</p>
     </footer>
 </body>
 
